--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Tarq Hilmar Siregar
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tetap Belajar</title>
+</head>
+<body>
+    <h1>Hello World</h1>
+</body>
+</html>
