Mengubah h1 menjadi h3 dan membuat paragraf

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetap Belajar</title>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <h3>Hello World</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus aspernatur debitis, facilis esse tenetur veniam provident voluptates minus ipsum dolore consequuntur odit ullam obcaecati ratione consequatur voluptas cum tempore voluptatibus.</p>
 </body>
+
 </html>
