Mengubah isi index.html dan style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h3>Hello World</h3>
+    <h3>My Product</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus aspernatur debitis, facilis esse tenetur veniam provident voluptates minus ipsum dolore consequuntur odit ullam obcaecati ratione consequatur voluptas cum tempore voluptatibus.</p>
 </body>
 
